# DroneDemoPy

./: AGENTS.md  PROJECT_ARCHITECTURE.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py  application.py  main_window.py
app/services/: __init__.py  detection_state.py  frame_converter.py  screen_capture_service.py  stream_controller.py  yolo_service.py
app/widgets/: __init__.py  image_view.py  screen_overlay.py  screen_region_selector.py
app/workers/: __init__.py  inference_worker.py
