[project]
name = "PySide Project"

[tool.pyside6-project]
files = [
    "main.py",
    "app/__init__.py",
    "app/application.py",
    "app/main_window.py",
    "app/services/__init__.py",
    "app/services/yolo_service.py",
    "app/services/frame_converter.py",
    "app/services/detection_state.py",
    "app/services/stream_controller.py",
    "app/services/screen_capture_service.py",
    "app/widgets/screen_overlay.py",
    "app/widgets/__init__.py",
    "app/widgets/image_view.py",
    "app/widgets/screen_region_selector.py",
]
